--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:orange">
-    <h2>Hello, Mon type!</h2>
+  <body style="background-color:white">
+    <h2>Hello, Mon type version 2!</h2>
   </body>
 </html>
