--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:green">
-    <h2>Hello, jaures!</h2>
+    <h2>Hello, Hasna!</h2>
   </body>
 </html>
